--- a/styles/sass/Header.module.scss
+++ b/styles/sass/Header.module.scss
@@ -75,9 +75,15 @@
         text-align: center;
         background-color: $lightgray;
         transition: all 0.3s ease-in-out;  
-        top: 4rem; 
+        top: 5rem; 
         z-index: 1;
         position: absolute;
+        width: 90%;
+        margin: auto;
+    }
+
+    .nav__item{
+        margin: 1rem 0;
     }
 }
 
@@ -95,10 +101,11 @@
     .menu_container{
         display: flex;
         flex-direction: row;
+        align-items: center;
     }
 
     .nav__item{
-        margin: 0 0.5rem; 
+        margin: 0 1.5rem; 
     }
 
     .bar{
