--- a/styles/sass/Projects.module.scss
+++ b/styles/sass/Projects.module.scss
@@ -66,7 +66,7 @@
         align-items: center;
         justify-content: center;
         position: relative; 
-        grid-gap: 2rem;
+        grid-gap: 4rem;
     }
 }
 
@@ -122,12 +122,16 @@
     }
 
     .detail1{
-        top: 15rem;
+        //top: 15rem;
     }
 
     
     .detail2{
-        bottom: 4rem;
+        //bottom: 2rem;
+    }
+
+    .detail3{
+        //bottom: 4rem;
     }
 
 }
@@ -136,14 +140,14 @@
 @media (min-width: 40rem){
     @supports(display: grid){
         .projects_container{
-            grid-template-columns: repeat(2, 50%);
+            grid-template-columns: repeat(3, 30%);
         }
     }
 
     .detail1,
     .detail2{   
         opacity: 0; 
-        width: 37.6%;
+        width: 30%;
         height: 15%;
         bottom: 2rem;
     }
